# pyspark_course_excercises

hw1/: .gitignore
hw1/notebooks/: Video Scoring.ipynb
hw2/: pyproject.toml
hw2/data_quality/: comments_checks.yml  test_dq.py  videos_checks.yml
hw2/tests/: test_functions.py
hw2/video_analytics/: functions.py
